--- a/index.html
+++ b/index.html
@@ -5,26 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apeperia</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;1,400&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/chamada.css">
+    <link rel="stylesheet" href="css/destaques.css">
 </head>
 <body>
-    <header>
-        <img src="img/logo-apeperia.svg" alt="Logo da Apeperia">
-        <nav>
+    <header class="cabecalho" class="container" >
+        <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="Logo da Apeperia">
+        <nav class="cabecalho__navegacao" >
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Planos</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Destaques</a></li>
-                <li><a href="#">Institucional</a></li>
-                <li><a href="#">Contato</a></li>
+                <li class="cabecalho__link"><a href="#">Sobre</a></li>
+                <li class="cabecalho__link"><a href="#">Planos</a></li>
+                <li class="cabecalho__link"><a href="#">Blog</a></li>
+                <li class="cabecalho__link"><a href="#">Destaques</a></li>
+                <li class="cabecalho__link"><a href="#">Institucional</a></li>
+                <li class="cabecalho__link"><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Aplicativos Na Medida</h1>
-            <p>Apeparia tem um jeito inovador de comprar e montar aplicativos para pequenas e média empresas</p>
-            <a href="#">Conheça os planos</a>
+        <section class="chamada" class="container">
+            <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
+            <p class="chamada__texto">Apeparia tem um jeito inovador de comprar e montar aplicativos para pequenas e média empresas</p>
+            <a class="chamada__botao button" href="#">Conheça os planos</a>
+        </section>
+
+        <section class="destaques">
+            <h2 class="destaques__titulo">Destaques</h2>
+            <a href="#">
+                <figure class="destaques__painel">
+                    <img src="img/comecando-criar-logotipo.png" alt="" class="destaques__painel-imagem">
+                    <figcaption class="destaques__painel-texto">Conheça as primeiras etapas para a criação de um logotipo</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="destaques__painel">
+                    <img src="img/dicas-fotografia.png" alt="" class="destaques__painel-imagem">
+                    <figcaption class="destaques__painel-texto">Veja dicas de como fotografar usando seu celular</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="destaques__botao button">Receber destaques por E-mail</a>
         </section>
 
     </main>
